--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password = root
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.open-in-view=false
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
