--- a/Back-end/pom.xml
+++ b/Back-end/pom.xml
@@ -10,12 +10,12 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
+
     <groupId>com.simplon.dvdStore</groupId>
     <artifactId>Back-end</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Back-end</name>
     <description>Back-end</description>
-
 
     <properties>
         <java.version>17</java.version>
@@ -58,7 +58,7 @@
             <artifactId>cdi-api</artifactId>
             <version>2.0.SP1</version>
         </dependency>
-        <!-- mapstruct et dÃ©pendence -->
+        <!-- mapstruct et dépendence -->
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
@@ -77,6 +77,35 @@
             <artifactId>lombok-mapstruct-binding</artifactId>
             <version>0.2.0</version>
         </dependency>
+
+        <!-- Security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <scope>test</scope>
+    </dependency>
 
     </dependencies>
 
@@ -116,6 +145,13 @@
                     </annotationProcessorPaths>
 
                 </configuration>
+
+
+            </plugin>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
 
         </plugins>
