--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -1,7 +1,13 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=8080
+
 spring.datasource.url=jdbc:mysql://localhost:3306/dvdStore?useSSL=true
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+initialization.mode=always
+
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.open-in-view=false
-spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+"${jwt.signing.key}" = "sirual"
